--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="design/styles.css">
-  <link rel="stylesheet" href="./design/responsive.css">
+  <link rel="stylesheet" href="design/responsive.css">
 
   <title>Frontend Mentor | Time tracking dashboard</title>
 
@@ -31,7 +31,7 @@
   <div class="container">
     <div class="profile">
       <div class="name">
-        <img src="/images/image-jeremy.png" alt="">
+        <img src="images/image-jeremy.png" alt="">
         <p>Reporte for</p>
         <h1>Jeremy Robson</h1>
       </div>
@@ -45,7 +45,7 @@
       <div class="div">
         <div class="title">
           <p>Work</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="work0">5hrs</h1>
@@ -57,7 +57,7 @@
       <div class="div">
         <div class="title">
           <p>Play</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="play0">1hrs</h1>
@@ -69,7 +69,7 @@
       <div class="div">
         <div class="title">
           <p>Study</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="study0">0hrs</h1>
@@ -81,7 +81,7 @@
       <div class="div">
         <div class="title">
           <p>Exercise</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="exercise0">1hrs</h1>
@@ -93,7 +93,7 @@
       <div class="div">
         <div class="title">
           <p>Social</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="social0">1hrs</h1>
@@ -105,7 +105,7 @@
       <div class="div">
         <div class="title">
           <p>Self Care</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="selfCare0">0hrs</h1>
@@ -121,7 +121,7 @@
 
 
   
-  <script src="/scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
