--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="container">
     <div class="profile">
       <div class="name">
-        <img src="images/image-jeremy.png" alt="">
+        <img src="/images/image-jeremy.png" alt="">
         <p>Reporte for</p>
         <h1>Jeremy Robson</h1>
       </div>
