--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="div">
         <div class="title">
           <p>Work</p>
-          <img src="images/icon-ellipsis.svg" alt="">
+          <img src="/images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="work0">5hrs</h1>
@@ -57,7 +57,7 @@
       <div class="div">
         <div class="title">
           <p>Play</p>
-          <img src="images/icon-ellipsis.svg" alt="">
+          <img src="/images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="play0">1hrs</h1>
@@ -69,7 +69,7 @@
       <div class="div">
         <div class="title">
           <p>Study</p>
-          <img src="images/icon-ellipsis.svg" alt="">
+          <img src="/images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="study0">0hrs</h1>
@@ -81,7 +81,7 @@
       <div class="div">
         <div class="title">
           <p>Exercise</p>
-          <img src="images/icon-ellipsis.svg" alt="">
+          <img src="/images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="exercise0">1hrs</h1>
@@ -93,7 +93,7 @@
       <div class="div">
         <div class="title">
           <p>Social</p>
-          <img src="images/icon-ellipsis.svg" alt="">
+          <img src="/images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="social0">1hrs</h1>
@@ -105,7 +105,7 @@
       <div class="div">
         <div class="title">
           <p>Self Care</p>
-          <img src="images/icon-ellipsis.svg" alt="">
+          <img src="/images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="selfCare0">0hrs</h1>
