--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="div">
         <div class="title">
           <p>Work</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="work0">5hrs</h1>
