--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="div">
         <div class="title">
           <p>Play</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="play0">1hrs</h1>
@@ -69,7 +69,7 @@
       <div class="div">
         <div class="title">
           <p>Study</p>
-          <img src="/images/icon-ellipsis.svg" alt="">
+          <img src="images/icon-ellipsis.svg" alt="">
         </div>
         <div class="states">
           <h1 class="study0">0hrs</h1>
